<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"

            android:layout_width="213dp"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/phone_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText"
            android:visibility="gone" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:visibility="gone"
            tools:text="Firebase User ID: 123456789abc" />

        <LinearLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:background="@drawable/singnupcred"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/tvHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="SIGN UP"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="Firstname"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="Lastname"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp" />


            <EditText
                android:id="@+id/fieldPhoneNumber"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/etRetype"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="Retype Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/fieldVerificationCode"
                android:layout_width="380dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/usename"
                android:ems="10"
                android:hint="@string/hint_verification_code"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:visibility="gone" />


            <Button
                android:id="@+id/buttonStartVerification"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/loginbtn"
                android:text="Sign me up"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/buttonVerifyPhone"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/loginbtn"
                android:text="@string/verify_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonResend"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/loginbtn"
                android:text="@string/resend_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
